tests/expected_invalid_try_outside_yields.diag.out
<input>:13:5: error: 'try' is only valid inside a function with 'fails'
        try acquire()
        ^^^^^^^^^^^^^
